objects/amazonconnect__AC_QueueMetrics__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Agents_After_Contact_Work__c</fullName>
        <label>Agents After Contact Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_Available__c</fullName>
        <label>Agents Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_Error__c</fullName>
        <label>Agents Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_Non_Productive__c</fullName>
        <label>Agents Non Productive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_On_Call__c</fullName>
        <label>Agents OnCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_Online__c</fullName>
        <label>Agents Online</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agents_Staffed__c</fullName>
        <label>Agents Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_In_Queue__c</fullName>
        <label>Contacts In Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_Scheduled__c</fullName>
        <label>Contacts Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Oldest_Contact_Age__c</fullName>
        <label>Oldest Contact Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Queue_ARN__c</fullName>
        <label>Queue ARN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Queue_Id__c</fullName>
        <externalId>true</externalId>
        <label>Queue Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AC Real Time Queue Metric</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Real Time Queue Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>